added stress modelling from ppg data

--- a/parse_data/main.ipynb
+++ b/parse_data/main.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -77,13 +77,14 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=10)]: Using backend LokyBackend with 10 concurrent workers.\n",
-      "[Parallel(n_jobs=10)]: Done   4 out of  15 | elapsed:  7.3min remaining: 20.0min\n",
-      "[Parallel(n_jobs=10)]: Done  12 out of  15 | elapsed: 14.6min remaining:  3.7min\n",
-      "[Parallel(n_jobs=10)]: Done  15 out of  15 | elapsed: 16.3min finished\n"
+      "[Parallel(n_jobs=10)]: Done   4 out of  15 | elapsed:  8.0min remaining: 21.9min\n",
+      "[Parallel(n_jobs=10)]: Done  12 out of  15 | elapsed: 15.9min remaining:  4.0min\n",
+      "[Parallel(n_jobs=10)]: Done  15 out of  15 | elapsed: 17.9min finished\n"
      ]
     }
    ],
    "source": [
+    "from scipy.stats import mode\n",
     "%matplotlib notebook\n",
     "def get_ecg_rr(ecg_data):\n",
     "    detectors = Detectors(700)\n",
@@ -142,25 +143,26 @@
     "    acc_data = data['signal']['wrist']['ACC']/64\n",
     "    ecg_data = data['signal']['chest']['ECG']\n",
     "    respiration_data = data['signal']['chest']['Resp']\n",
+    "    label_data = data['label']\n",
+    "    \n",
     "    total_seconds = ppg_data.shape[0]/ppg_fs\n",
     "    start_ts = datetime.utcnow().timestamp()\n",
     "    ecg_ts = start_ts + np.arange(0,total_seconds,1/ecg_fs)\n",
     "    acc_ts = start_ts + np.arange(0,total_seconds,1/acc_fs)\n",
+    "    \n",
+    "    label_data = np.concatenate([ecg_ts.reshape(-1,1),label_data.reshape(-1,1)],axis=1)\n",
     "    acc_data = np.concatenate([acc_ts.reshape(-1,1),acc_data],axis=1)\n",
     "    respiration_ts = ecg_ts\n",
     "    respiration_data = np.vstack([respiration_ts,respiration_data.reshape(-1)]).T\n",
+    "    \n",
     "    ecg_data = np.vstack([ecg_ts,ecg_data.reshape(-1)]).T\n",
     "    ecg_rr1 = get_ecg_rr(ecg_data)\n",
     "    ecg_rr = ecg_rr1.values\n",
+    "    \n",
     "    ppg_ts = start_ts + np.arange(0,total_seconds,1/ppg_fs)\n",
+    "    \n",
     "    ppg_data = np.vstack([ppg_ts,ppg_data.reshape(-1)]).T\n",
-    "#     ppg_data = bandpass_filter_ppg(ppg_data,Fs=ppg_fs,fil_type='ppg')\n",
-    "#     plt.figure()\n",
-    "#     plt.plot(respiration_data[:,0],respiration_data[:,1])\n",
     "    respiration_data = bandpass_filter_respiration(respiration_data,Fs=ecg_fs,fil_type='ppg')\n",
-    "#     plt.plot(respiration_data[:,0],respiration_data[:,1])\n",
-    "#     plt.show()\n",
-    "#     return 0\n",
     "    respiration_data[:,0] = respiration_data[:,0]*1000\n",
     "    peak_index,valley_index = compute_peak_valley(respiration_data)\n",
     "    peak_data = respiration_data[peak_index]\n",
@@ -169,7 +171,7 @@
     "    rip_feature[:,:2] = rip_feature[:,:2]/1000\n",
     "    ppg_data = get_quality_features(ppg_data)\n",
     "    ppg_data = pd.DataFrame(ppg_data,columns=['time','ppg','skew','kurtosis','iqr','relative_power']).dropna().sort_values('time').reset_index(drop=True)\n",
-    "#     ppg_data['timestamp'] = ppg_data['time'].apply(lambda a:datetime.utcfromtimestamp(a))\n",
+    "    ppg_data['timestamp'] = ppg_data['time'].apply(lambda a:datetime.utcfromtimestamp(a))\n",
     "    respiration_data[:,0] = respiration_data[:,0]/1000\n",
     "    all_data = []\n",
     "    for i in range(0,ppg_data.shape[0]-window_size*ppg_fs,window_size*ppg_fs//4):\n",
@@ -184,8 +186,8 @@
     "    ppg_windows['expiration_duration'] = ppg_windows.apply(lambda a:np.mean(rip_feature[np.where((rip_feature[:,1]>=a['start_time'])&(rip_feature[:,0]<a['end_time']))[0],3]),axis=1)\n",
     "    ppg_windows['respiration_duration'] = ppg_windows.apply(lambda a:np.mean(rip_feature[np.where((rip_feature[:,1]>=a['start_time'])&(rip_feature[:,0]<a['end_time']))[0],4]),axis=1)\n",
     "    ppg_windows['acc_window'] = ppg_windows.apply(lambda a: acc_data[np.where((acc_data[:,0]>=a['start_time'])&(acc_data[:,0]<a['end_time']))[0],:],axis=1)\n",
-    "    print(ppg_windows.shape,ppg_windows.dropna().shape)\n",
-    "    print(ppg_windows.shape)\n",
+    "    ppg_windows['label'] = ppg_windows.apply(lambda a: mode(label_data[np.where((label_data[:,0]>=a['start_time'])&(label_data[:,0]<a['end_time']))[0],1])[0][0],axis=1)\n",
+    "    \n",
     "    if not os.path.isdir(output_directory+str(window_size)):\n",
     "        os.makedirs(output_directory+str(window_size))\n",
     "    final_path = output_directory+str(window_size)+'/'\n",
@@ -203,6 +205,57 @@
    "metadata": {},
    "source": [
     "Sanity Check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data = pickle.load(open(filelists[0],'rb'),encoding='latin1')\n",
+    "from scipy.stats import mode\n",
+    "data  = save_participant_data(filelists[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mode([1,2,3,4,4])[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((3875900,), (3875900, 1))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['label'].shape,data['signal']['chest']['ECG'].shape"
    ]
   },
   {
