--- a/input_processing/input_ppg_processing_to_tabular_format.ipynb
+++ b/input_processing/input_ppg_processing_to_tabular_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = '../../ppg_quality_aware_hr/data/8/'\n",
+    "filepath = '../../ppg_heart_rate/data/8/'\n",
     "filelists = [filepath+a for a in os.listdir(filepath) if a[-1] not in ['s','f']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "    X_ppg.extend([a.values[:,1].reshape(1,-1,1) for a in data['data'].values])\n",
     "    X_acl.extend([a[:,1:].reshape(1,-1,3) for a in data['acc_window'].values])\n",
     "    y.extend(list(data['ecg_rr'].values))\n",
-    "    y_participant.extend([i])\n",
+    "    y_participant.extend([i]*data.shape[0])\n",
     "    data['participant'] = i\n",
     "    data['timestamp'] = data['start_time'].apply(lambda a:datetime.utcfromtimestamp(a))\n",
     "    data = data.sort_values('timestamp').reset_index(drop=True)\n",
@@ -50,42 +50,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_acl = np.concatenate(X_acl)\n",
     "X_ppg = np.concatenate(X_ppg)\n",
-    "y = np.array(y)"
+    "y = np.array(y)\n",
+    "y_participant = np.array(y_participant)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(43363, 256, 3)"
+       "((43363, 256, 3), (43363, 512, 1), (43363,), (43363,))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_acl.shape"
+    "X_acl.shape,X_ppg.shape,y.shape,y_participant.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "512/8"
+    "import pickle\n",
+    "pickle.dump([X_acl,X_ppg,y,y_participant],open('../data/tabular_data.p','wb'))"
    ]
   },
   {
