--- a/parse_data/main.ipynb
+++ b/parse_data/main.ipynb
@@ -9,24 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['WESAD.zip']\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "directory = '../../ppg_quality_aware_hr/data/WESAD.zip'\n",
+    "directory = '../../ppg_quality_aware_hr/data/Wesad.zip'\n",
     "output_directory = '../../ppg_quality_aware_hr/data/'\n",
     "\n",
     "if not os.path.isdir(output_directory):\n",
@@ -48,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,17 +63,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../../ppg_quality_aware_hr/data/WESAD/S13/S13.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S16/S16.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S4/S4.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S3/S3.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S15/S15.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S14/S14.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S7/S7.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S2/S2.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S17/S17.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S8/S8.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S10/S10.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S11/S11.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S5/S5.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S9/S9.pkl',\n",
+       " '../../ppg_quality_aware_hr/data/WESAD/S6/S6.pkl']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filelists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=10)]: Using backend LokyBackend with 10 concurrent workers.\n",
-      "[Parallel(n_jobs=10)]: Done   4 out of  15 | elapsed:  8.0min remaining: 21.9min\n",
-      "[Parallel(n_jobs=10)]: Done  12 out of  15 | elapsed: 15.9min remaining:  4.0min\n",
-      "[Parallel(n_jobs=10)]: Done  15 out of  15 | elapsed: 17.9min finished\n"
+      "[Parallel(n_jobs=20)]: Using backend LokyBackend with 20 concurrent workers.\n",
+      "[Parallel(n_jobs=20)]: Done   8 out of  15 | elapsed: 22.3min remaining: 19.5min\n",
+      "[Parallel(n_jobs=20)]: Done  15 out of  15 | elapsed: 24.0min finished\n"
      ]
     }
    ],
@@ -102,7 +129,7 @@
     "    X2 = np.zeros((np.shape(X1)[0],data.shape[1]))\n",
     "    nyq = Fs/2\n",
     "    b = signal.firls(219,np.array([0,0.3,0.5,3,3.5,nyq]),\n",
-    "                              np.array([0,0,1,1,0,0]),np.array([10,1,1]),fs=nyq*2)\n",
+    "                              np.array([0,0,1,1,0,0]),np.array([10,1,1]),nyq=nyq)\n",
     "    a = [1]\n",
     "    X2[:,0] = data[:,0]\n",
     "    X2[:,1] = signal.filtfilt(b, a, X1)\n",
@@ -114,7 +141,7 @@
     "    X2 = np.zeros((np.shape(X1)[0],data.shape[1]))\n",
     "    nyq = Fs/2\n",
     "    b = signal.firls(219,np.array([0,0.02,0.05,1,1.5,nyq]),\n",
-    "                              np.array([0,0,1,1,0,0]),np.array([10,1,1]),fs=nyq*2)\n",
+    "                              np.array([0,0,1,1,0,0]),np.array([10,1,1]),nyq=nyq)\n",
     "    a = [1]\n",
     "    X2[:,0] = data[:,0]\n",
     "    X2[:,1] = signal.filtfilt(b, a, X1)\n",
@@ -144,7 +171,6 @@
     "    ecg_data = data['signal']['chest']['ECG']\n",
     "    respiration_data = data['signal']['chest']['Resp']\n",
     "    label_data = data['label']\n",
-    "    \n",
     "    total_seconds = ppg_data.shape[0]/ppg_fs\n",
     "    start_ts = datetime.utcnow().timestamp()\n",
     "    ecg_ts = start_ts + np.arange(0,total_seconds,1/ecg_fs)\n",
@@ -187,7 +213,7 @@
     "    ppg_windows['respiration_duration'] = ppg_windows.apply(lambda a:np.mean(rip_feature[np.where((rip_feature[:,1]>=a['start_time'])&(rip_feature[:,0]<a['end_time']))[0],4]),axis=1)\n",
     "    ppg_windows['acc_window'] = ppg_windows.apply(lambda a: acc_data[np.where((acc_data[:,0]>=a['start_time'])&(acc_data[:,0]<a['end_time']))[0],:],axis=1)\n",
     "    ppg_windows['label'] = ppg_windows.apply(lambda a: mode(label_data[np.where((label_data[:,0]>=a['start_time'])&(label_data[:,0]<a['end_time']))[0],1])[0][0],axis=1)\n",
-    "    \n",
+    "    print(ppg_windows.shape)\n",
     "    if not os.path.isdir(output_directory+str(window_size)):\n",
     "        os.makedirs(output_directory+str(window_size))\n",
     "    final_path = output_directory+str(window_size)+'/'\n",
@@ -197,7 +223,8 @@
     "\n",
     "from joblib import Parallel,delayed\n",
     "output_directory = '../../ppg_quality_aware_hr/data/'\n",
-    "final = Parallel(n_jobs=10,verbose=2)(delayed(save_participant_data)(f,window_size=8) for f in filelists)"
+    "final = Parallel(n_jobs=20,verbose=2)(delayed(save_participant_data)(f,window_size=8) for f in filelists)\n",
+    "# [save_participant_data(f,window_size=8) for f in filelists]"
    ]
   },
   {
@@ -209,8 +236,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# data = pickle.load(open(filelists[0],'rb'),encoding='latin1')\n",
@@ -220,92 +249,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "mode([1,2,3,4,4])[0][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((3875900,), (3875900, 1))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "data['label'].shape,data['signal']['chest']['ECG'].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'os' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-4077049312cc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfilelists\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'../../ppg_quality_aware_hr/data/8/'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0ma\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../../ppg_quality_aware_hr/data/8/'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m's'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'f'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "filelists = ['../../ppg_quality_aware_hr/data/8/'+a for a in os.listdir('../../ppg_quality_aware_hr/data/8/') if a[-1] not in ['s','f']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n",
-      "[512]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "for i in range(len(filelists)):\n",
     "    data = pickle.load(open(filelists[i],'rb'))\n",
@@ -334,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
