added tensorflow environment for faster training in alienware

--- a/autoencoders/bidirectional_autoencoder.ipynb
+++ b/autoencoders/bidirectional_autoencoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-26T19:15:15.353516Z",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-26T19:15:15.535148Z",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-26T19:15:15.804906Z",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-26T19:15:20.183033Z",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-26T19:15:20.432613Z",
@@ -89,23 +89,22 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split,LeaveOneGroupOut,LeavePGroupsOut\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from keras.layers import *\n",
-    "from keras.models import *\n",
-    "from keras import regularizers\n",
-    "from keras import backend as K\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from keras import backend as K \n",
     "import matplotlib.pyplot as plt\n",
     "from keras.callbacks import ModelCheckpoint\n",
     "from keras.callbacks import EarlyStopping\n",
     "from sklearn.model_selection import train_test_split\n",
     "import numpy as np\n",
     "%matplotlib notebook\n",
-    "from keras.layers import Conv1D,BatchNormalization,Dropout,Input,MaxPooling1D,Flatten,Dense,Input, GaussianNoise\n",
+    "from keras.layers import Conv1D,BatchNormalization,Dropout,Input,MaxPooling1D,Flatten,Dense,Input, GaussianNoise,LSTM, Bidirectional\n",
     "from keras.models import Model, Sequential"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-26T19:15:21.461113Z",
@@ -129,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-26T19:15:21.511664Z",
@@ -138,7 +137,18 @@
      "shell.execute_reply": "2020-12-26T19:15:22.288450Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=20)]: Using backend LokyBackend with 20 concurrent workers.\n",
+      "[Parallel(n_jobs=20)]: Done   1 tasks      | elapsed:    0.8s\n",
+      "[Parallel(n_jobs=20)]: Done  37 out of  50 | elapsed:    5.3s remaining:    1.9s\n",
+      "[Parallel(n_jobs=20)]: Done  50 out of  50 | elapsed:    6.5s finished\n"
+     ]
+    }
+   ],
    "source": [
     "from joblib import Parallel,delayed\n",
     "\n",
@@ -188,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-26T19:15:22.299865Z",
@@ -197,7 +207,20 @@
      "shell.execute_reply": "2020-12-26T19:15:22.325312Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(((1140480, 256, 1), (1140480, 256, 1)),\n",
+       " ((285120, 256, 1), (285120, 256, 1)),\n",
+       " ((14851, 256, 1), (14851, 256, 1)))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_x, val_x, train_y, val_y = train_test_split(train_x,train_y,test_size = 0.2,random_state=42)\n",
     "\n",
@@ -206,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-26T19:15:22.332844Z",
@@ -262,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-26T19:15:22.339310Z",
@@ -278,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2020-12-26T19:15:22.409613Z",
@@ -290,7 +313,7 @@
    "outputs": [],
    "source": [
     "from keras.models import load_model\n",
-    "filepath = '../model_files/BRDAE_final.hdf5'\n",
+    "filepath = '../model_files/BRDAE_final_1.hdf5'\n",
     "# model = load_model(filepath)"
    ]
   },
@@ -305,7 +328,43 @@
      "shell.execute_reply": "2020-12-26T19:15:38.768994Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /home/mullah/anaconda3/envs/test/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+      "\n",
+      "Train on 1140480 samples, validate on 285120 samples\n",
+      "Epoch 1/200\n",
+      "1140480/1140480 [==============================] - 276s 242us/step - loss: 0.0375 - val_loss: 0.0284\n",
+      "\n",
+      "Epoch 00001: val_loss improved from inf to 0.02841, saving model to ../model_files/BRDAE_final_1.hdf5\n",
+      "Epoch 2/200\n",
+      "1140480/1140480 [==============================] - 276s 242us/step - loss: 0.0359 - val_loss: 0.0272\n",
+      "\n",
+      "Epoch 00002: val_loss improved from 0.02841 to 0.02723, saving model to ../model_files/BRDAE_final_1.hdf5\n",
+      "Epoch 3/200\n",
+      "1140480/1140480 [==============================] - 276s 242us/step - loss: 0.0355 - val_loss: 0.0261\n",
+      "\n",
+      "Epoch 00003: val_loss improved from 0.02723 to 0.02610, saving model to ../model_files/BRDAE_final_1.hdf5\n",
+      "Epoch 4/200\n",
+      "1140480/1140480 [==============================] - 276s 242us/step - loss: 0.0353 - val_loss: 0.0275\n",
+      "\n",
+      "Epoch 00004: val_loss did not improve from 0.02610\n",
+      "Epoch 5/200\n",
+      "1140480/1140480 [==============================] - 276s 242us/step - loss: 0.0352 - val_loss: 0.0266\n",
+      "\n",
+      "Epoch 00005: val_loss did not improve from 0.02610\n",
+      "Epoch 6/200\n",
+      "1140480/1140480 [==============================] - 276s 242us/step - loss: 0.0357 - val_loss: 0.0277\n",
+      "\n",
+      "Epoch 00006: val_loss did not improve from 0.02610\n",
+      "Epoch 7/200\n",
+      " 547000/1140480 [=============>................] - ETA: 2:09 - loss: 0.0354"
+     ]
+    }
+   ],
    "source": [
     "checkpoint = ModelCheckpoint(filepath, monitor='val_loss', verbose=1, save_best_only=True, mode='min')\n",
     "es = EarlyStopping(monitor='val_loss', mode='min', verbose=1,patience=20)\n",
@@ -334,7 +393,7 @@
    },
    "outputs": [],
    "source": [
-    "filepath = '../model_files/BRDAE_final.hdf5'\n",
+    "filepath = '../model_files/BRDAE_final_1.hdf5'\n",
     "model = load_model(filepath)"
    ]
   },
@@ -425,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
