modified convlutional autoencoder with evaluation on heart rate

--- a/input_processing/input_ppg_processing_to_tabular_format.ipynb
+++ b/input_processing/input_ppg_processing_to_tabular_format.ipynb
@@ -8,25 +8,11 @@
    "source": [
     "import os\n",
     "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
+    "\n",
     "filepath = '../data/8/'\n",
-    "filelists = [filepath+a for a in os.listdir(filepath) if a[-1] not in ['s','f']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "filelists = [filepath+a for a in os.listdir(filepath) if a[-1] not in ['s','f']]\n",
+    "\n",
     "from datetime import datetime\n",
     "X_ppg = []\n",
     "X_acl = []\n",
@@ -45,47 +31,15 @@
     "    data = data.sort_values('timestamp').reset_index(drop=True)\n",
     "    hr_windows = [df[['ecg_rr','participant']].values for i,df in \n",
     "                  data.groupby(pd.Grouper(key='timestamp',freq='20S')) if df.shape[0]==10]\n",
-    "    X_hr_windows.extend(hr_windows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    X_hr_windows.extend(hr_windows)\n",
+    "\n",
     "X_acl = np.concatenate(X_acl)\n",
     "X_ppg = np.concatenate(X_ppg)\n",
     "y = np.array(y)\n",
-    "y_participant = np.array(y_participant)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((43363, 256, 3), (43363, 512, 1), (43363,), (43363,))"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_acl.shape,X_ppg.shape,y.shape,y_participant.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y_participant = np.array(y_participant)\n",
+    "\n",
+    "X_acl.shape,X_ppg.shape,y.shape,y_participant.shape\n",
+    "\n",
     "import pickle\n",
     "pickle.dump([X_acl,X_ppg,y,y_participant],open('../data/tabular_data.p','wb'))"
    ]
