--- a/parse_data/main.ipynb
+++ b/parse_data/main.ipynb
@@ -63,40 +63,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['../../ppg_quality_aware_hr/data/WESAD/S13/S13.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S16/S16.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S4/S4.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S3/S3.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S15/S15.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S14/S14.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S7/S7.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S2/S2.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S17/S17.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S8/S8.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S10/S10.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S11/S11.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S5/S5.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S9/S9.pkl',\n",
-       " '../../ppg_quality_aware_hr/data/WESAD/S6/S6.pkl']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filelists"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -249,24 +215,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "mode([1,2,3,4,4])[0][0]"
+    "data = pickle.load(open(filelists[0],'rb'),encoding='latin1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7], dtype=int32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data['label'].shape,data['signal']['chest']['ECG'].shape"
+    "np.unique(data['label'])"
    ]
   },
   {
@@ -278,24 +251,6 @@
    "outputs": [],
    "source": [
     "filelists = ['../../ppg_quality_aware_hr/data/8/'+a for a in os.listdir('../../ppg_quality_aware_hr/data/8/') if a[-1] not in ['s','f']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(len(filelists)):\n",
-    "    data = pickle.load(open(filelists[i],'rb'))\n",
-    "#     data['acc_window'] = data['acc_window'].apply(lambda a:a[:255])\n",
-    "    data['shape'] = data['data'].apply(lambda a:a.shape[0])\n",
-    "    print(data['shape'].unique())\n",
-    "\n",
-    "#     plt.hist(data['data'].loc[0]['relative_power'])\n",
-    "#     plt.show()"
    ]
   }
  ],
@@ -315,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
