--- a/parse_data/download_files.ipynb
+++ b/parse_data/download_files.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Beginning file download with urllib2...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import urllib.request\n",
     "\n",
@@ -25,9 +17,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib.request\n",
+    "\n",
+    "print('Beginning file download with urllib2...')\n",
+    "\n",
+    "url = 'https://livememphis-my.sharepoint.com/personal/mullah_memphis_edu/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fmullah%5Fmemphis%5Fedu%2FDocuments%2Fdata%5Fwalking%2Fright%5Fwrist%2Ezip&parent=%2Fpersonal%2Fmullah%5Fmemphis%5Fedu%2FDocuments%2Fdata%5Fwalking&originalPath=aHR0cHM6Ly9saXZlbWVtcGhpcy1teS5zaGFyZXBvaW50LmNvbS86dTovZy9wZXJzb25hbC9tdWxsYWhfbWVtcGhpc19lZHUvRVNnTExwQUdqalJEZ05tX3Z3eUtsZ2dCUFBfQW5jTmE0dDJCODNfYndKUXdUUT9ydGltZT1tN3lvYkpEcDJFZw'\n",
+    "a = urllib.request.urlretrieve(url, '../data/right_wrist.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "directory = '../../mperf-activity-recognition/data/right_wrist.zip'\n",
+    "output_directory = '../../mperf-activity-recognition/data/'\n",
+    "\n",
+    "os.listdir(output_directory)\n",
+    "\n",
+    "import zipfile\n",
+    "with zipfile.ZipFile(directory, 'r') as zip_ref:\n",
+    "    zip_ref.extractall(output_directory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -48,9 +73,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
